# GPTeasers

./: .gitignore  README.md  architecture-diagram.md  docker-compose.yml  index.html
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: azure_func_streaming_gpteasers-generatequiz(slot).yml  ci_python.yml  deploy_aca_with_sp.yml  generate-image-AutoDeployTrigger-74d8c281-f0f4-4a94-b59a-e171ebf45d27.yml  generate-quiz-AutoDeployTrigger-ac144fc3-33a1-42d2-a9e0-ab03d8457c77.yml  generate-quiz-AutoDeployTrigger-da2a9f0e-f302-401b-a62c-1c03af9aa276.yml  static.yml  (+5 more)
backend/: Dockerfile  README.md  fastapi_generate_quiz.py  generate_image.py  generate_quiz.py  host.json  local.settings.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  response_stream_parser.py
backend/GenerateImage/: azure_func_generate_image.py  dockerfile  fastapi_generate_image.py
backend/GenerateQuiz/: dockerfile  fastapi_generate_quiz.py  generate_quiz.py  requirements.txt
backend/GenerateQuiz/steaming_tests/: dockerfile  fast_test_streaming.py  streaming_example.py
backend/terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
backend/tests/: conftest.py  test_generate_image.py  test_generate_quiz.py  test_response_stream_parser.py
backend/venv_azure_func/: pyvenv.cfg
backend_azure_function/: README.md  requirements.txt
frontend/: Dockerfile  ads.txt  app.js  controller.js  game.js  index.html  loadingbar.js  package-lock.json  package.json  quiz.js  readme.html  readme.md  script.js  ui.js
(+26 files in other folders)
