[project]
name = "gpteasers-backend"
version = "0.1.0"
description = "FastAPI backend for GPTeasers quiz generation app"
authors = [
    {name = "DJSaundes1997@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "openai",
    "fastapi",
    "uvicorn",
    "litellm",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-mock",
]

[project.scripts]
dev = "uvicorn fastapi_generate_quiz:app --reload --host 0.0.0.0 --port 8000"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as an integration test."
]
addopts = "-m 'not integration'"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
]
